[package]
name = "eodms_rust_utils"
description = "Various utilities like dropbox handling, file and directory helpers, and size and rate formatting"
categories = ["filesystem","value-formatting"]
version = "0.2.2"
edition = "2021"
keywords = ["Dropbox","Formatting"]
license = "OGL"
readme = "README.md"
repository = "https://github.com/eodms-sgdot/eodms_rust_utils"

[dependencies]
futures = "0.3"
log = "0.4"
num-traits = "0.2"
regex = "1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-util = "0.7"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = { level = "warn" }
exhaustive_enums = "warn"
std_instead_of_core = "warn"
absolute_paths = "warn"
let_underscore_untyped = "warn"
cargo = { level = "warn", priority = 2 }
indexing_slicing = { level = "warn", priority = 2 }
string_slice = { level = "warn", priority = 2 }
